# sshenc

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DEVELOPMENT.md  FIX_PLAN.md  LIBENCLAVEAPP_DESIGN.md  LICENSE  MIRI.md  Makefile  README.md  RELEASE.md  REPORT.md  SECURITY.md  TESTING.md  TEST_EXPANSION_PLAN.md  TEST_PLAN.md  THREAT_MODEL.md  test_sequential_sign.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  e2e-windows.yml  e2e.yml  macos-matrix.yml  release.yml  windows-matrix.yml
Formula/: sshenc.rb
crates/sshenc-agent/: Cargo.toml
crates/sshenc-agent-proto/: Cargo.toml
crates/sshenc-agent-proto/src/: client.rs  lib.rs  message.rs  pipe.rs  signature.rs  wire.rs
crates/sshenc-agent/src/: legacy_keys.rs  lib.rs  main.rs  op_log.rs  server.rs
crates/sshenc-cli/: Cargo.toml
crates/sshenc-cli/src/: agent_client.rs  agent_sign.rs  commands.rs  launchagent.rs  main.rs  rotation.rs  upgrade.rs  wsl.rs
crates/sshenc-cli/tests/: integration.rs
crates/sshenc-core/: Cargo.toml
crates/sshenc-core/src/: backup.rs  bin_discovery.rs  config.rs  error.rs  fingerprint.rs  key.rs  lib.rs  pubkey.rs  shell_env.rs  ssh_config.rs
crates/sshenc-e2e/: Cargo.toml
crates/sshenc-e2e/docker/: Dockerfile  entrypoint.sh  sshd_config
crates/sshenc-e2e/src/: lib.rs
crates/sshenc-e2e/tests/: agent_client_abrupt_disconnect.rs  agent_concurrency.rs  agent_concurrent_keygen_and_sign.rs  agent_extensions.rs  agent_forwarding.rs  agent_forwarding_multihop.rs  agent_labels_concurrent.rs  agent_lifecycle_corners.rs  agent_lifecycle_edges_2.rs  agent_lifecycle_signal_and_collision_corners.rs  agent_protocol_and_lifecycle.rs  agent_protocol_edge.rs  agent_protocol_edge_windows.rs  agent_protocol_truncated_frame_and_rsa_flag.rs  agent_pubkey_byte_stable_across_restart.rs  agent_socket_perms.rs  agent_transient_errors.rs  cache_ttl.rs  cli_concurrency.rs  cli_config_and_ssh_corners.rs  cli_first_run_and_keys_dir_robustness.rs  cli_flag_matrix.rs  cli_input_and_socket_path_validation.rs  cli_label_control_chars.rs  cli_version_help.rs  commit_empty_stdin_and_y_sign_long_namespace.rs  completion_scripts.rs  config_init_roundtrip.rs  config_variations.rs  corrupted_state.rs  cross_binary_and_migration.rs  drop_in.rs  drop_in_extras.rs  edge_cases_and_perms.rs  exit_codes.rs  export_pub_flag_combos.rs  export_pub_format.rs  extended.rs  git_3way_merge_conflict_signed.rs  git_autocrlf_with_signing.rs  (+81 more)
crates/sshenc-ffi-apple/: Cargo.toml  build.rs
crates/sshenc-ffi-apple/src/: keychain.rs  lib.rs  se.rs
crates/sshenc-ffi-apple/swift/: sshenc_se_bridge.swift
crates/sshenc-ffi-windows/: Cargo.toml
crates/sshenc-ffi-windows/src/: lib.rs  tpm.rs
crates/sshenc-gitenc/: Cargo.toml
crates/sshenc-gitenc/src/: main.rs
crates/sshenc-keygen-cli/: Cargo.toml
crates/sshenc-keygen-cli/src/: main.rs
crates/sshenc-pkcs11/: Cargo.toml
crates/sshenc-pkcs11/src/: agent_client.rs  keystore.rs  lib.rs  session.rs  types.rs
crates/sshenc-se/: Cargo.toml
crates/sshenc-se/src/: backend.rs  compat.rs  lib.rs  linux.rs  macos.rs  proxy.rs  sk.rs  unified.rs  windows.rs
crates/sshenc-se/tests/: contract.rs
crates/sshenc-test-support/: Cargo.toml
crates/sshenc-test-support/src/: lib.rs  mock.rs
crates/sshenc-tpm-bridge/: Cargo.toml
crates/sshenc-tpm-bridge/src/: main.rs
docs/: DEEP_REVIEW_2026-05-06.md  PORTING-shell-rc.md  e2e-design.md  macos-unsigned-ux.md  no-window-server-mitigations.md  wrapping-key-cache.md
docs/diagrams/: README.md  data-flow-diagram.mmd  git-commit-signing-flow.mmd  git-ssh-transport-flow.mmd  gitenc-config-flow.mmd  gitenc-setup-flow.mmd  install-autostart-flow.mmd  key-lifecycle-flow.mmd  platform-backend-flow.mmd  ssh-agent-signing-flow.mmd  ssh-sign-flow.mmd  trust-boundaries.mmd  workspace-context.mmd
examples/: agent-config.toml  ssh-config-agent.txt  ssh-config-pkcs11.txt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bridge_response.rs  parse_der_signature.rs  parse_request.rs  read_ssh_string.rs
installer/: sshenc.entitlements  sshenc.wxs
scoop/: sshenc.json
scripts/: Lint-Powershell.ps1  Test-Sshenc-MacOS.sh  Test-Sshenc-Windows.ps1
winget/: GoDaddy.sshenc.installer.yaml  GoDaddy.sshenc.locale.en-US.yaml  GoDaddy.sshenc.yaml  JGowdy.sshenc.installer.yaml  JGowdy.sshenc.locale.en-US.yaml  JGowdy.sshenc.yaml
