[workspace]
members = [
    "crates/sshenc-core",
    "crates/sshenc-se",
    "crates/sshenc-agent-proto",
    "crates/sshenc-agent",
    "crates/sshenc-cli",
    "crates/sshenc-keygen-cli",
    "crates/sshenc-pkcs11",
    "crates/sshenc-test-support",
    "crates/sshenc-gitenc",
]
resolver = "2"

[workspace.package]
version = "0.6.8"
edition = "2021"
license = "MIT"
rust-version = "1.75"
repository = "https://github.com/godaddy/sshenc"

[workspace.dependencies]
# Internal crates
sshenc-core = { path = "crates/sshenc-core" }
sshenc-se = { path = "crates/sshenc-se" }
sshenc-agent-proto = { path = "crates/sshenc-agent-proto" }
sshenc-agent = { path = "crates/sshenc-agent" }
sshenc-test-support = { path = "crates/sshenc-test-support" }

# libenclaveapp (shared hardware-backed key management)
enclaveapp-core = { path = "../crates/enclaveapp-core" }
enclaveapp-apple = { path = "../crates/enclaveapp-apple", features = ["signing"] }
enclaveapp-windows = { path = "../crates/enclaveapp-windows", features = ["signing"] }
enclaveapp-software = { path = "../crates/enclaveapp-software", features = ["signing", "keyring-storage"] }
enclaveapp-linux-tpm = { path = "../crates/enclaveapp-linux-tpm", features = ["signing"] }
enclaveapp-wsl = { path = "../crates/enclaveapp-wsl" }
enclaveapp-app-storage = { path = "../crates/enclaveapp-app-storage" }
enclaveapp-build-support = { path = "../crates/enclaveapp-build-support" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Encoding
base64 = "0.22"
hex = "0.4"

# Crypto / hashing
sha2 = "0.10"
md-5 = "0.10"

# Error handling
thiserror = "2"
anyhow = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Windows CNG (Windows only)
windows = { version = "0.58", features = ["Win32_Security_Cryptography", "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Threading"] }

# Byte manipulation
byteorder = "1"
bytes = "1"

# Config
dirs = "6"
toml = "0.8"

# SSH key parsing and signing
ssh-key = { version = "0.6", features = ["crypto", "encryption"] }
signature = "2"

# System
libc = "0.2"

# Misc
rand = "0.8"

[workspace.lints.rust]
unsafe_code = "deny"
future_incompatible = { level = "deny", priority = -1 }
ambiguous_negative_literals = "warn"
closure_returning_async_block = "warn"
explicit_outlives_requirements = "warn"
if_let_rescope = "warn"
impl_trait_overcaptures = "warn"
impl_trait_redundant_captures = "warn"
let_underscore_drop = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_debug_implementations = "warn"
noop_method_call = "warn"
non_ascii_idents = "warn"
redundant_lifetimes = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unsafe_attr_outside_unsafe = "warn"
unused = { level = "warn", priority = -1 }
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_macro_rules = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
default_union_representation = "deny"
exit = "deny"
lossy_float_literal = "deny"
mem_forget = "deny"
multiple_inherent_impl = "deny"
mut_mut = "deny"
ptr_as_ptr = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
wildcard_dependencies = "deny"
dbg_macro = "warn"
empty_drop = "warn"
fallible_impl_from = "warn"
inefficient_to_string = "warn"
macro_use_imports = "warn"
match_same_arms = "warn"
no_effect_underscore_binding = "warn"
panic = "warn"
print_stderr = "warn"
print_stdout = "warn"
same_name_method = "warn"
single_char_lifetime_names = "warn"
implicit_clone = "warn"
trait_duplication_in_bounds = "warn"
type_repetition_in_bounds = "warn"
unimplemented = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
used_underscore_binding = "warn"
