[package]
name = "sshenc-agent-proto"
description = "SSH agent protocol types and encoding/decoding for sshenc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
sshenc-core = { workspace = true }
enclaveapp-core = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Windows-only: CreateFileW / ReadFile / WriteFile / CloseHandle for
# the named-pipe client that talks to sshenc-agent on Windows.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
] }

[lints]
workspace = true
