[package]
name = "sshenc-agent"
description = "SSH agent daemon for sshenc Secure Enclave keys"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = []
# Test-only: enables the software backend in sshenc-se.
force-software = ["sshenc-se/force-software"]

[lib]
name = "sshenc_agent"
path = "src/lib.rs"

[[bin]]
name = "sshenc-agent"
path = "src/main.rs"

[dependencies]
enclaveapp-core = { workspace = true }
sshenc-core = { workspace = true }
sshenc-se = { workspace = true }
sshenc-agent-proto = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
socket2 = { version = "0.6", features = ["all"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
] }

[dev-dependencies]
sshenc-test-support = { workspace = true }
sshenc-agent-proto = { workspace = true }
tokio = { workspace = true, features = ["test-util", "io-util", "macros"] }

[lints]
workspace = true
