[package]
name = "sshenc-agent"
description = "SSH agent daemon for sshenc Secure Enclave keys"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = []
# Test-only: enables the software backend in sshenc-se.
force-software = ["sshenc-se/force-software"]
# Allow running unsigned binaries as agents. For users building from source
# who understand that unsigned binaries will require passwords instead of
# Touch ID and create separate keychain entries from production agents.
# DO NOT use this flag in automated builds or CI.
allow-unsigned = []

[lib]
name = "sshenc_agent"
path = "src/lib.rs"

[[bin]]
name = "sshenc-agent"
path = "src/main.rs"

[dependencies]
enclaveapp-core = { workspace = true }
sshenc-core = { workspace = true }
sshenc-se = { workspace = true }
sshenc-agent-proto = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
# Direct dep on enclaveapp-apple is needed for the migrate-meta RPC,
# which writes a per-key meta-integrity tag to the macOS legacy
# Keychain. The agent is the only binary that should be touching that
# Keychain (legacy ACL is bound to the creating binary's code
# signature; cross-binary access prompts), so the FFI-bearing call
# lives here rather than in the CLI.
enclaveapp-apple = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
# Direct dep on enclaveapp-windows for the migrate-meta RPC, which
# writes a per-key meta-integrity tag as a Credential Manager entry
# and stamps the migration marker the same way. Mirrors the macOS
# arrangement above — the FFI-bearing call lives in the agent
# rather than the CLI so the trust anchor stays bound to the
# agent's process identity.
enclaveapp-windows = { workspace = true, features = ["signing"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Direct dep on enclaveapp-keyring for the migrate-meta RPC, which
# writes a per-key meta-integrity tag to the Secret Service and
# stamps the migration marker there too. Same rationale as the
# macOS / Windows entries above. `keyring-storage` is the default
# feature on this crate; we name it explicitly so a future change
# to the default doesn't silently downgrade us.
enclaveapp-keyring = { workspace = true, features = ["signing", "keyring-storage"] }

[target.'cfg(windows)'.dependencies]
socket2 = { version = "0.6", features = ["all"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
] }

[dev-dependencies]
sshenc-test-support = { workspace = true }
sshenc-agent-proto = { workspace = true }
tokio = { workspace = true, features = ["test-util", "io-util", "macros"] }

[lints]
workspace = true
