[package]
name = "sshenc-cli"
description = "Main CLI for sshenc Secure Enclave SSH key management"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "sshenc"
path = "src/main.rs"

[features]
default = []
# Forwards the `force-software` flag down to sshenc-se + sshenc-agent
# so the whole binary set exposes `SSHENC_FORCE_SOFTWARE=1` at runtime.
# Test-only.
force-software = ["sshenc-se/force-software", "sshenc-agent/force-software"]

[dependencies]
sshenc-core = { workspace = true }
sshenc-se = { workspace = true }
sshenc-agent = { workspace = true }
enclaveapp-core = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
sshenc-agent-proto = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
enclaveapp-apple = { workspace = true }

[target.'cfg(windows)'.dependencies]
enclaveapp-windows = { workspace = true }
enclaveapp-wsl = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
enclaveapp-keyring = { workspace = true }
enclaveapp-linux-tpm = { workspace = true }

[build-dependencies]
enclaveapp-build-support = { workspace = true }

[dev-dependencies]
sshenc-test-support = { workspace = true }

[lints]
workspace = true
