[package]
name = "sshenc-core"
description = "Core domain models, SSH public key formatting, and shared types for sshenc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
md-5 = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
byteorder = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
