[package]
name = "sshenc-e2e"
description = "End-to-end tests for sshenc against a containerized OpenSSH server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }

[[test]]
name = "drop_in"
path = "tests/drop_in.rs"

[[test]]
name = "ssh_functions"
path = "tests/ssh_functions.rs"

[[test]]
name = "extended"
path = "tests/extended.rs"

[[test]]
name = "gitenc"
path = "tests/gitenc.rs"

[[test]]
name = "lifecycle"
path = "tests/lifecycle.rs"

[[test]]
name = "cli_flag_matrix"
path = "tests/cli_flag_matrix.rs"

[[test]]
name = "small_subcommands"
path = "tests/small_subcommands.rs"

[[test]]
name = "agent_protocol_edge"
path = "tests/agent_protocol_edge.rs"

[[test]]
name = "gitenc_edge"
path = "tests/gitenc_edge.rs"

[[test]]
name = "config_variations"
path = "tests/config_variations.rs"

[[test]]
name = "install_uninstall"
path = "tests/install_uninstall.rs"

[[test]]
name = "y_sign_verify"
path = "tests/y_sign_verify.rs"

[[test]]
name = "agent_concurrency"
path = "tests/agent_concurrency.rs"

[[test]]
name = "signal_handling"
path = "tests/signal_handling.rs"

[[test]]
name = "corrupted_state"
path = "tests/corrupted_state.rs"

[[test]]
name = "agent_protocol_edge_windows"
path = "tests/agent_protocol_edge_windows.rs"

[[test]]
name = "native_hardware"
path = "tests/native_hardware.rs"

[[test]]
name = "cache_ttl"
path = "tests/cache_ttl.rs"

[[test]]
name = "completion_scripts"
path = "tests/completion_scripts.rs"

[[test]]
name = "agent_extensions"
path = "tests/agent_extensions.rs"

[[test]]
name = "export_pub_format"
path = "tests/export_pub_format.rs"

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
