[package]
name = "sshenc-e2e"
description = "End-to-end tests for sshenc against a containerized OpenSSH server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }

[[test]]
name = "drop_in"
path = "tests/drop_in.rs"

[[test]]
name = "ssh_functions"
path = "tests/ssh_functions.rs"

[[test]]
name = "extended"
path = "tests/extended.rs"

[[test]]
name = "gitenc"
path = "tests/gitenc.rs"

[[test]]
name = "lifecycle"
path = "tests/lifecycle.rs"

[[test]]
name = "cli_flag_matrix"
path = "tests/cli_flag_matrix.rs"

[[test]]
name = "small_subcommands"
path = "tests/small_subcommands.rs"

[[test]]
name = "agent_protocol_edge"
path = "tests/agent_protocol_edge.rs"

[[test]]
name = "gitenc_edge"
path = "tests/gitenc_edge.rs"

[[test]]
name = "config_variations"
path = "tests/config_variations.rs"

[[test]]
name = "install_uninstall"
path = "tests/install_uninstall.rs"

[[test]]
name = "y_sign_verify"
path = "tests/y_sign_verify.rs"

[[test]]
name = "agent_concurrency"
path = "tests/agent_concurrency.rs"

[[test]]
name = "signal_handling"
path = "tests/signal_handling.rs"

[[test]]
name = "corrupted_state"
path = "tests/corrupted_state.rs"

[[test]]
name = "agent_protocol_edge_windows"
path = "tests/agent_protocol_edge_windows.rs"

[[test]]
name = "native_hardware"
path = "tests/native_hardware.rs"

[[test]]
name = "cache_ttl"
path = "tests/cache_ttl.rs"

[[test]]
name = "completion_scripts"
path = "tests/completion_scripts.rs"

[[test]]
name = "agent_extensions"
path = "tests/agent_extensions.rs"

[[test]]
name = "export_pub_format"
path = "tests/export_pub_format.rs"

[[test]]
name = "sign_edge_data"
path = "tests/sign_edge_data.rs"

[[test]]
name = "json_output_stability"
path = "tests/json_output_stability.rs"

[[test]]
name = "cli_concurrency"
path = "tests/cli_concurrency.rs"

[[test]]
name = "exit_codes"
path = "tests/exit_codes.rs"

[[test]]
name = "drop_in_extras"
path = "tests/drop_in_extras.rs"

[[test]]
name = "pkcs11_boot_hook"
path = "tests/pkcs11_boot_hook.rs"

[[test]]
name = "gitenc_extras"
path = "tests/gitenc_extras.rs"

[[test]]
name = "keygen_up_and_agent_labels"
path = "tests/keygen_up_and_agent_labels.rs"

[[test]]
name = "multi_key_scaling"
path = "tests/multi_key_scaling.rs"

[[test]]
name = "log_level_filter"
path = "tests/log_level_filter.rs"

[[test]]
name = "config_init_roundtrip"
path = "tests/config_init_roundtrip.rs"

[[test]]
name = "agent_transient_errors"
path = "tests/agent_transient_errors.rs"

[[test]]
name = "gitenc_agent_only_contract"
path = "tests/gitenc_agent_only_contract.rs"

[[test]]
name = "y_verify_negatives"
path = "tests/y_verify_negatives.rs"

[[test]]
name = "agent_socket_perms"
path = "tests/agent_socket_perms.rs"

[[test]]
name = "keygen_backup_rollback"
path = "tests/keygen_backup_rollback.rs"

[[test]]
name = "agent_labels_concurrent"
path = "tests/agent_labels_concurrent.rs"

[[test]]
name = "agent_forwarding"
path = "tests/agent_forwarding.rs"

[[test]]
name = "ssh_port_forwarding"
path = "tests/ssh_port_forwarding.rs"

[[test]]
name = "gitenc_advanced_ops"
path = "tests/gitenc_advanced_ops.rs"

[[test]]
name = "y_variants"
path = "tests/y_variants.rs"

[[test]]
name = "cross_binary_and_migration"
path = "tests/cross_binary_and_migration.rs"

[[test]]
name = "output_stability_and_shell_tools"
path = "tests/output_stability_and_shell_tools.rs"

[[test]]
name = "gitenc_config_more"
path = "tests/gitenc_config_more.rs"

[[test]]
name = "ssh_add_unsupported_ops"
path = "tests/ssh_add_unsupported_ops.rs"

[[test]]
name = "agent_forwarding_multihop"
path = "tests/agent_forwarding_multihop.rs"

[[test]]
name = "edge_cases_and_perms"
path = "tests/edge_cases_and_perms.rs"

[[test]]
name = "protocol_limits_and_keygen_bin"
path = "tests/protocol_limits_and_keygen_bin.rs"

[dev-dependencies]
serde_json = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
