[package]
name = "sshenc-e2e"
description = "End-to-end tests for sshenc against a containerized OpenSSH server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }

[[test]]
name = "drop_in"
path = "tests/drop_in.rs"

[[test]]
name = "ssh_functions"
path = "tests/ssh_functions.rs"

[[test]]
name = "extended"
path = "tests/extended.rs"

[[test]]
name = "gitenc"
path = "tests/gitenc.rs"

[[test]]
name = "lifecycle"
path = "tests/lifecycle.rs"

[[test]]
name = "cli_flag_matrix"
path = "tests/cli_flag_matrix.rs"

[[test]]
name = "small_subcommands"
path = "tests/small_subcommands.rs"

[[test]]
name = "agent_protocol_edge"
path = "tests/agent_protocol_edge.rs"

[[test]]
name = "gitenc_edge"
path = "tests/gitenc_edge.rs"

[[test]]
name = "config_variations"
path = "tests/config_variations.rs"

[[test]]
name = "install_uninstall"
path = "tests/install_uninstall.rs"

[[test]]
name = "y_sign_verify"
path = "tests/y_sign_verify.rs"

[[test]]
name = "agent_concurrency"
path = "tests/agent_concurrency.rs"

[[test]]
name = "signal_handling"
path = "tests/signal_handling.rs"

[[test]]
name = "corrupted_state"
path = "tests/corrupted_state.rs"

[[test]]
name = "agent_protocol_edge_windows"
path = "tests/agent_protocol_edge_windows.rs"

[[test]]
name = "native_hardware"
path = "tests/native_hardware.rs"

[[test]]
name = "cache_ttl"
path = "tests/cache_ttl.rs"

[[test]]
name = "completion_scripts"
path = "tests/completion_scripts.rs"

[[test]]
name = "agent_extensions"
path = "tests/agent_extensions.rs"

[[test]]
name = "export_pub_format"
path = "tests/export_pub_format.rs"

[[test]]
name = "sign_edge_data"
path = "tests/sign_edge_data.rs"

[[test]]
name = "json_output_stability"
path = "tests/json_output_stability.rs"

[[test]]
name = "cli_concurrency"
path = "tests/cli_concurrency.rs"

[[test]]
name = "exit_codes"
path = "tests/exit_codes.rs"

[[test]]
name = "drop_in_extras"
path = "tests/drop_in_extras.rs"

[[test]]
name = "pkcs11_boot_hook"
path = "tests/pkcs11_boot_hook.rs"

[[test]]
name = "gitenc_extras"
path = "tests/gitenc_extras.rs"

[[test]]
name = "keygen_up_and_agent_labels"
path = "tests/keygen_up_and_agent_labels.rs"

[[test]]
name = "multi_key_scaling"
path = "tests/multi_key_scaling.rs"

[[test]]
name = "log_level_filter"
path = "tests/log_level_filter.rs"

[[test]]
name = "config_init_roundtrip"
path = "tests/config_init_roundtrip.rs"

[[test]]
name = "agent_transient_errors"
path = "tests/agent_transient_errors.rs"

[[test]]
name = "gitenc_agent_only_contract"
path = "tests/gitenc_agent_only_contract.rs"

[[test]]
name = "y_verify_negatives"
path = "tests/y_verify_negatives.rs"

[[test]]
name = "agent_socket_perms"
path = "tests/agent_socket_perms.rs"

[[test]]
name = "keygen_backup_rollback"
path = "tests/keygen_backup_rollback.rs"

[[test]]
name = "agent_labels_concurrent"
path = "tests/agent_labels_concurrent.rs"

[[test]]
name = "agent_forwarding"
path = "tests/agent_forwarding.rs"

[[test]]
name = "ssh_port_forwarding"
path = "tests/ssh_port_forwarding.rs"

[[test]]
name = "gitenc_advanced_ops"
path = "tests/gitenc_advanced_ops.rs"

[[test]]
name = "y_variants"
path = "tests/y_variants.rs"

[[test]]
name = "cross_binary_and_migration"
path = "tests/cross_binary_and_migration.rs"

[[test]]
name = "output_stability_and_shell_tools"
path = "tests/output_stability_and_shell_tools.rs"

[[test]]
name = "gitenc_config_more"
path = "tests/gitenc_config_more.rs"

[[test]]
name = "ssh_add_unsupported_ops"
path = "tests/ssh_add_unsupported_ops.rs"

[[test]]
name = "agent_forwarding_multihop"
path = "tests/agent_forwarding_multihop.rs"

[[test]]
name = "edge_cases_and_perms"
path = "tests/edge_cases_and_perms.rs"

[[test]]
name = "protocol_limits_and_keygen_bin"
path = "tests/protocol_limits_and_keygen_bin.rs"

[[test]]
name = "gitenc_corners"
path = "tests/gitenc_corners.rs"

[[test]]
name = "agent_lifecycle_corners"
path = "tests/agent_lifecycle_corners.rs"

[[test]]
name = "ssh_config_interactions"
path = "tests/ssh_config_interactions.rs"

[[test]]
name = "cli_version_help"
path = "tests/cli_version_help.rs"

[[test]]
name = "git_protocol_variants"
path = "tests/git_protocol_variants.rs"

[[test]]
name = "scaling_edges"
path = "tests/scaling_edges.rs"

[[test]]
name = "ssh_multiplex_and_addkeys"
path = "tests/ssh_multiplex_and_addkeys.rs"

[[test]]
name = "git_verify_pull_show_sig"
path = "tests/git_verify_pull_show_sig.rs"

[[test]]
name = "agent_protocol_and_lifecycle"
path = "tests/agent_protocol_and_lifecycle.rs"

[[test]]
name = "gitenc_env_corners"
path = "tests/gitenc_env_corners.rs"

[[test]]
name = "ssh_client_feats"
path = "tests/ssh_client_feats.rs"

[[test]]
name = "git_fetch_and_partial_clone"
path = "tests/git_fetch_and_partial_clone.rs"

[[test]]
name = "agent_lifecycle_signal_and_collision_corners"
path = "tests/agent_lifecycle_signal_and_collision_corners.rs"

[[test]]
name = "cli_config_and_ssh_corners"
path = "tests/cli_config_and_ssh_corners.rs"

[[test]]
name = "gitenc_env_and_label_corners"
path = "tests/gitenc_env_and_label_corners.rs"

[[test]]
name = "git_verify_and_identity_agent_corners"
path = "tests/git_verify_and_identity_agent_corners.rs"

[[test]]
name = "git_history_ops_and_validation_corners"
path = "tests/git_history_ops_and_validation_corners.rs"

[[test]]
name = "git_signing_amend_and_empty"
path = "tests/git_signing_amend_and_empty.rs"

[[test]]
name = "git_force_lease_and_single_branch"
path = "tests/git_force_lease_and_single_branch.rs"

[[test]]
name = "agent_client_abrupt_disconnect"
path = "tests/agent_client_abrupt_disconnect.rs"

[[test]]
name = "git_stash_rebase_and_history_queries"
path = "tests/git_stash_rebase_and_history_queries.rs"

[[test]]
name = "git_push_tags_and_delete"
path = "tests/git_push_tags_and_delete.rs"

[[test]]
name = "cli_input_and_socket_path_validation"
path = "tests/cli_input_and_socket_path_validation.rs"

[[test]]
name = "git_tag_force_rebase_abort_and_am"
path = "tests/git_tag_force_rebase_abort_and_am.rs"

[[test]]
name = "git_signoff_reset_and_gitenc_local_ops"
path = "tests/git_signoff_reset_and_gitenc_local_ops.rs"

[[test]]
name = "git_hooks_with_signing"
path = "tests/git_hooks_with_signing.rs"

[[test]]
name = "git_commit_message_variants_and_notes"
path = "tests/git_commit_message_variants_and_notes.rs"

[[test]]
name = "git_mv_and_rm_signed_commits"
path = "tests/git_mv_and_rm_signed_commits.rs"

[[test]]
name = "git_bisect_and_restore_on_signed_chain"
path = "tests/git_bisect_and_restore_on_signed_chain.rs"

[[test]]
name = "ssh_config_host_negation_and_multipattern"
path = "tests/ssh_config_host_negation_and_multipattern.rs"

[[test]]
name = "gitenc_unborn_head_and_removed_signing_config"
path = "tests/gitenc_unborn_head_and_removed_signing_config.rs"

[[test]]
name = "keys_dir_symlink_handling"
path = "tests/keys_dir_symlink_handling.rs"

[[test]]
name = "scp_preserve_and_recursive"
path = "tests/scp_preserve_and_recursive.rs"

[[test]]
name = "git_tag_and_branch_deletion_on_signed_repo"
path = "tests/git_tag_and_branch_deletion_on_signed_repo.rs"

[[test]]
name = "git_pull_rebase_signed"
path = "tests/git_pull_rebase_signed.rs"

[[test]]
name = "rsync_archive_and_delete"
path = "tests/rsync_archive_and_delete.rs"

[[test]]
name = "export_pub_flag_combos"
path = "tests/export_pub_flag_combos.rs"

[[test]]
name = "inspect_export_pub_on_deleted_label"
path = "tests/inspect_export_pub_on_deleted_label.rs"

[[test]]
name = "agent_pubkey_byte_stable_across_restart"
path = "tests/agent_pubkey_byte_stable_across_restart.rs"

[[test]]
name = "git_autocrlf_with_signing"
path = "tests/git_autocrlf_with_signing.rs"

[[test]]
name = "git_ref_ops_with_signing"
path = "tests/git_ref_ops_with_signing.rs"

[[test]]
name = "cli_first_run_and_keys_dir_robustness"
path = "tests/cli_first_run_and_keys_dir_robustness.rs"

[[test]]
name = "git_show_signature_and_gc"
path = "tests/git_show_signature_and_gc.rs"

[[test]]
name = "agent_protocol_truncated_frame_and_rsa_flag"
path = "tests/agent_protocol_truncated_frame_and_rsa_flag.rs"

[[test]]
name = "commit_empty_stdin_and_y_sign_long_namespace"
path = "tests/commit_empty_stdin_and_y_sign_long_namespace.rs"

[[test]]
name = "ssh_config_include_directive"
path = "tests/ssh_config_include_directive.rs"

[[test]]
name = "keygen_label_length_boundary"
path = "tests/keygen_label_length_boundary.rs"

[[test]]
name = "gitenc_under_locale_variance"
path = "tests/gitenc_under_locale_variance.rs"

[[test]]
name = "ssh_config_ipv6_literal"
path = "tests/ssh_config_ipv6_literal.rs"

[[test]]
name = "git_filter_branch_re_signs"
path = "tests/git_filter_branch_re_signs.rs"

[[test]]
name = "git_symbolic_ref_pack_refs_and_archive"
path = "tests/git_symbolic_ref_pack_refs_and_archive.rs"

[[test]]
name = "git_3way_merge_conflict_signed"
path = "tests/git_3way_merge_conflict_signed.rs"

[[test]]
name = "gitenc_gpg_format_openpgp_fallback"
path = "tests/gitenc_gpg_format_openpgp_fallback.rs"

[[test]]
name = "cli_label_control_chars"
path = "tests/cli_label_control_chars.rs"

[[test]]
name = "git_plumbing_and_large_file_signing"
path = "tests/git_plumbing_and_large_file_signing.rs"

[[test]]
name = "ssh_keygen_known_hosts_find_and_remove"
path = "tests/ssh_keygen_known_hosts_find_and_remove.rs"

[[test]]
name = "ssh_config_keepalive_and_qos_directives"
path = "tests/ssh_config_keepalive_and_qos_directives.rs"

[[test]]
name = "agent_concurrent_keygen_and_sign"
path = "tests/agent_concurrent_keygen_and_sign.rs"

[dev-dependencies]
serde_json = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
