[package]
name = "sshenc-ffi-apple"
description = "Apple Secure Enclave CryptoKit bridge for sshenc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
thiserror = { workspace = true }
dirs = { workspace = true }
