[package]
name = "sshenc-ffi-apple"
description = "Apple Secure Enclave CryptoKit bridge for sshenc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
thiserror = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }
base64 = { workspace = true }
