[package]
name = "sshenc-ffi-windows"
description = "Windows TPM 2.0 CNG bridge for sshenc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }
