[package]
name = "sshenc-gitenc"
description = "Git wrapper that selects sshenc Secure Enclave identities"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "gitenc"
path = "src/main.rs"

[dependencies]
dirs = { workspace = true }
enclaveapp-core = { workspace = true }

[lints]
workspace = true
