[package]
name = "sshenc-keygen-cli"
description = "Convenience keygen CLI for sshenc Secure Enclave SSH keys"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = []
# Test-only: enables the software backend in sshenc-se.
force-software = ["sshenc-se/force-software"]

[[bin]]
name = "sshenc-keygen"
path = "src/main.rs"

[dependencies]
enclaveapp-core = { workspace = true }
sshenc-core = { workspace = true }
sshenc-se = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }

[lints]
workspace = true
