[package]
name = "sshenc-pkcs11"
description = "PKCS#11 provider for sshenc Secure Enclave SSH keys"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
name = "sshenc_pkcs11"
crate-type = ["cdylib", "rlib"]

[dependencies]
sshenc-agent-proto = { workspace = true }
dirs = { workspace = true }
