[package]
name = "sshenc-pkcs11"
description = "PKCS#11 agent launcher for sshenc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
name = "sshenc_pkcs11"
crate-type = ["cdylib", "rlib"]

[dependencies]
dirs = { workspace = true }
enclaveapp-core = { workspace = true }
sshenc-core = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[lints]
workspace = true
